<resources>
    <string name="app_name">ShaveJam2015</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_no_bill_amount">Please enter a value for bill amount</string>
    <string name="error_invalid_bill_amount">Please enter a valid number for bill amount</string>
    <string name="form_label_enter_bill_amount">Enter bill amount:</string>
    <string name="form_label_enter_tip_amount">Enter tip amount:</string>
    <string name="error_invalid_tip_percent">Enter a valid tip percent</string>
    <string name="exception_tip_percent_outside_range">Tip percentage was outside of acceptable range</string>
    <string name="prefs_default_tip_label">Default tip percent</string>
    <string name="prefs_default_tip_description">The percentage that will be used for tip calculations by default</string>
    <string name="prefs_location_recommendation_label">Location recommmendations</string>
    <string name="prefs_location_recommendation_description">This option will allow the app to recommend tips amounts based on your location.</string>
    <string name="exact_tip_heading">Exact tip</string>
    <string name="recommended_total_heading">Rec. total</string>
    <string name="recommended_percent_heading">Rec. %</string>
</resources>
